<resources>
    <string name="app_name">TutorToolkit</string>
    <string name="student_name">Student Name</string>
    <string name="subject">Subject</string>
    <string name="grade_level">Grade Level</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="add_student">Add Student</string>
    <string name="image_representing_student">Image representing student</string>
    <string name="delete">Delete</string>
    <string name="graph_of_grades">Graph of Grades</string>
    <string name="graph_of_students_grades">Graph of students\' grades</string>
    <string name="_90">90%</string>
    <string name="a">A</string>
    <string name="example_note_here">Example Note Here!</string>
    <string name="add_grade">Add Grade</string>
    <string name="textview">TextView</string>
    <string name="decimal_grade">Decimal Grade</string>
    <string name="letter_grade">Letter Grade</string>
    <string name="notes">Notes</string>
    <string name="clear_grades">Clear Grades</string>
    <string name="delete_student">Delete Student</string>
    <string name="student_image_icon_choice">Student Image Icon Choice</string>
    <string name="icon_1">Icon 1</string>
    <string name="choose_your_icon">Choose Your Icon!</string>
    <string name="student_list">Student List</string>
    <string name="tutortoolkit">TutorToolkit</string>
    <string name="todo_list">Todo List</string>
    <string name="image_of_main_icon">Image of main icon</string>
    <string name="add_todo">Add Todo</string>
    <string name="enter_todo_item_here">Enter Todo Item Here</string>
    <string name="enter_student_name_here">Enter Student Name Here</string>
    <string name="enter">Enter</string>
    <string name="todo_item">Todo Item</string>
</resources>
