<?xml version="1.0" encoding="utf-8"?>

    <layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <data>
            <!-- Get reference to addStudentViewModel -->
            <variable
                name="addGradeViewModel"
                type="com.taymath.tutortoolkit.addgrade.AddGradeViewModel"/>
            <variable
                name="grade"
                type="com.taymath.tutortoolkit.studentdatabase.Grade" />
        </data>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/grade_float_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ems="10"
                android:hint="@string/decimal_grade"
                android:inputType="numberDecimal"
                android:text="@={addGradeViewModel.gradeFloatText}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/student_name_text" />

            <EditText
                android:id="@+id/grade_string_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ems="10"
                android:hint="@string/letter_grade"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grade_float_text" />

            <EditText
                android:id="@+id/notes_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/notes"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/grade_string_text" />

            <Button
                android:id="@+id/add_grade_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> addGradeViewModel.onAddGrade(gradeStringText.getText().toString(), Float.parseFloat(gradeFloatText.getText().toString()), notesText.getText().toString(), studentNameText.getText().toString())}"
                android:text="@string/add_grade"
                android:enabled="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notes_text" />

            <TextView
                android:id="@+id/student_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:hint="@string/student_name"
                android:text="@{addGradeViewModel.student.studentNameString}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>